--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,6 @@
-<h2 id="title">Welcome to Ember</h2>
+<h2 id="title">楼兰 · 中国行政区划</h2>
 
-{{outlet}}
+<h3>手动生成多级下拉选项</h3>
+
+{{province-select options=model selected=selectedProvince}}
+
